idt: now working

--- a/limine.cfg
+++ b/limine.cfg
@@ -2,18 +2,18 @@
 TIMEOUT=5
  
 # The entry name that will be displayed in the boot menu.
-:bloreos (KASLR on)
-    # We use the Limine boot protocol.
-    PROTOCOL=limine
- 
-    # Path to the kernel to boot. boot:/// represents the partition on which limine.cfg is located.
-    KERNEL_PATH=boot:///bloreos
- 
-# Same thing, but without KASLR.
 :bloreos (KASLR off)
     PROTOCOL=limine
  
     # Disable KASLR (it is enabled by default for relocatable kernels)
     KASLR=no
  
+    KERNEL_PATH=boot:///bloreos
+
+# The entry name that will be displayed in the boot menu.
+:bloreos (KASLR on)
+    # We use the Limine boot protocol.
+    PROTOCOL=limine
+ 
+    # Path to the kernel to boot. boot:/// represents the partition on which limine.cfg is located.
     KERNEL_PATH=boot:///bloreos
