term: start of kernel terminal

--- a/limine.cfg
+++ b/limine.cfg
@@ -10,6 +10,8 @@ TIMEOUT=5
  
     KERNEL_PATH=boot:///bloreos
 
+    MODULE_PATH=boot:///Font.psf
+
 # The entry name that will be displayed in the boot menu.
 :bloreos (KASLR on)
     # We use the Limine boot protocol.
@@ -17,3 +19,5 @@ TIMEOUT=5
  
     # Path to the kernel to boot. boot:/// represents the partition on which limine.cfg is located.
     KERNEL_PATH=boot:///bloreos
+
+    MODULE_PATH=boot:///Font.psf
